# Cpp-Game-Engine

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
assets/shaders/: vshader.glsl
assets/shaders/2d/: vshader.glsl
core/: Engine.cpp  Engine.h  platform.h
core/engine/: EngineImpl.cpp  EngineImpl.h
core/file/: FileSystem.cpp  FileSystem.h  FileSystemUtil.cpp  FileSystemUtil.h  utils.cpp  utils.hpp
core/file/default/: DesktopFileSystem.cpp
core/graphics/: Camera.h  Camera.hpp  Graphics.cpp  Graphics.h  Graphics.hpp  GraphicsArgs.hpp  GraphicsScene.cpp  GraphicsScene.h  Mesh.cpp  Mesh.h  Mesh.hpp  Model.hpp  MyVertex.cpp  MyVertex.h  MyVertex.hpp  Polygon.h  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp  Triangle.h  Triangle.hpp  system.hpp
core/graphics/opengl/: GraphicsGl.cpp  MeshGl.cpp  ShaderGl.cpp  TextureGl.cpp
core/io/: Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
core/math/: Rect.hpp  Vec4.h  Vec4f.cpp  Vec4f.h
core/resource/: GraphicsLoader.hpp  Resources.cpp  Resources.h  ResourcesImpl.cpp  ResourcesImpl.hpp  utils.hpp
core/resource/loader/: GlGraphicsLoader.cpp
core/scene/: Scene.cpp  Scene.h
core/sprite/: SpriteRenderer.cpp  SpriteRenderer.hpp
core/tools/: StopWatch.cpp  StopWatch.h
core/ui/: UI.cpp  UI.h
core/ui/desktop/: UIGLFW.cpp
include/: ResourceId.hpp  glad.c  globals.h  mygl.cpp  mygl.h  mygl.hpp  stb_image.h  strtools.h  strtools.hpp
include/GLFW/: glfw3.h
include/KHR/: khrplatform.h
include/SDL2/: SDL_audio.h  SDL_egl.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_hints.h  SDL_misc.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles2_khrplatform.h  SDL_rwops.h  SDL_scancode.h  SDL_system.h
include/glad/: glad.h
lib/cmake/SDL2/: sdl2-config.cmake
sample/: SampleScene.cpp  SampleScene.h  Scene2d.cpp  Scene2d.hpp
src/: glad.c  main.cpp  platform.h  platforms.h
src/core/: Engine.cpp  Engine.h  EngineImpl.cpp  EngineImpl.h  FileSystem.cpp  FileSystem.h
src/core/engine/: EngineImpl.cpp  EngineImpl.h
src/core/file/: FileSystem.h  FileSystemUtil.h  PlatformFileSystem.h
src/core/file/default/: DefaultFileSystem.cpp  DefaultFileSystem.h
src/core/graphics/: Graphics.cpp  Graphics.h  GraphicsScene.cpp  GraphicsScene.h  Mesh.h  MeshData.h  MeshDataStatic.h  Model.h  MyVertex.cpp  MyVertex.h  PlatformGraphics.h  PlatformMesh.h  PlatformShader.h  Polygon.h  Shader.h  ShaderProgram.h  Texture.h
src/core/graphics/opengl/: FatMeshGl.h  GraphicsGl.cpp  GraphicsGl.h  MeshGl.h  MyVertex.h  OpenGLGraphics.cpp  OpenGLGraphics.h  ShaderProgramGl.cpp  ShaderProgramGl.h  TextureGl.cpp  TextureGl.h
src/core/math/: Vec4.cpp
src/core/resource/: Resources.h  ResourcesImpl.h
src/core/scene/: EngineScene.cpp  EngineScene.h
